# AMD

./: ModelPerformance.ipynb  Performance_with_leakyrelu_support.txt  Performance_without_leakyrelu_support.txt  ml concepts
BFS/: bfs.cc
CNN_Arch/: cnn architechtures.odt
CUDA/: CUDA_Program
CompArch/: Computer Architechture.odt
GTest/: squareroot.cpp  squareroottest.cpp
JSON_Model_Python/: ReadJSON.py  trace_inception.json
OpenMP/: Factorial.cc  HelloWorld.cc  MatrixMul.cc  OpenMP_Documentation.odt  OpenMP_Performance_Test.odt
PyTorch_Model_Performance/: ModelPerformance.ipynb
SymTable/my_project/: CMakeLists.txt  Makefile  main.cc  symtable.cc  symtable.h  symtable_test.cc
Yolov3 model codes/: performance_script.py  rewrite_graph.py  run_eval_upgraded.sh  tf_prediction_realdata.py  tf_prediction_upgraded.py
